[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/VFX/colorRamp/COLORRAMP_blueGravity_01.tres" type="Texture" id=1]
[ext_resource path="res://Assets/VFX/Textures/TEXTURE_trace01_01.png" type="Texture" id=2]
[ext_resource path="res://Assets/VFX/Textures/TEXTURE_flare01_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/VFX/Textures/TEXTURE_flame03_01.png" type="Texture" id=4]
[ext_resource path="res://Assets/VFX/Textures/TEXTURE_magic05_01.png" type="Texture" id=5]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_Scripts/Vfx_Orb_1.gd" type="Script" id=6]
[ext_resource path="res://Assets/VFX/colorRamp/COLORRAMP_orangeGravity_01.tres" type="Texture" id=7]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0.0129032, 0.496774, 1 )
colors = PoolColorArray( 0, 0.337255, 0.729412, 1, 0.0352941, 0.345098, 0.705882, 1, 0.0414124, 0.236016, 0.460938, 1 )

[sub_resource type="GradientTexture" id=41]
gradient = SubResource( 21 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0.793182 ), 0.0, 0.0, 0, 0, Vector2( 0.382022, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.561798, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.776136 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=39]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=40]
resource_local_to_scene = true
lifetime_randomness = 0.11
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.2
initial_velocity_random = 0.12
angular_velocity = 60.0
angular_velocity_random = 0.98
angle = 360.0
angle_random = 1.0
scale = 3.0
scale_random = 0.09
scale_curve = SubResource( 39 )
color_ramp = SubResource( 41 )

[sub_resource type="QuadMesh" id=34]

[sub_resource type="SpatialMaterial" id=35]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[node name="Vfx_Orb_1" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.49707e-08, 1.5, 0.285631 )
script = ExtResource( 6 )
gravityStateDOWN = ExtResource( 1 )
gravityStateUP = ExtResource( 7 )

[node name="blob" type="Particles" parent="."]
layers = 2
material_override = SubResource( 2 )
amount = 200
process_material = SubResource( 40 )
draw_pass_1 = SubResource( 34 )

[node name="fog_wide" type="Particles" parent="."]
material_override = SubResource( 35 )
amount = 100
lifetime = 3.0
process_material = SubResource( 40 )
draw_pass_1 = SubResource( 34 )

[node name="sparks2" type="Particles" parent="."]
material_override = SubResource( 15 )
amount = 50
lifetime = 2.0
process_material = SubResource( 40 )
draw_pass_1 = SubResource( 34 )

[node name="sparks3" type="Particles" parent="."]
material_override = SubResource( 17 )
amount = 100
lifetime = 2.0
process_material = SubResource( 40 )
draw_pass_1 = SubResource( 34 )
